--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ on:
         default: false
         type: boolean
 
+# Add permissions for the workflow
+permissions:
+  contents: write
+  actions: read
+  checks: write
+
 jobs:
   build:
     strategy:
@@ -24,10 +30,12 @@ jobs:
             arch: x64
             python_url: https://www.python.org/ftp/python/3.11.6/python-3.11.6-embed-amd64.zip
             python_exe: python.exe
+            artifact_pattern: "*.exe"
           - os: macos-latest
             platform: mac
             arch: x64
             python_exe: bin/python
+            artifact_pattern: "*.dmg"
             
     runs-on: ${{ matrix.os }}
     
@@ -161,37 +169,37 @@ jobs:
         
         echo "Backend test completed"
         
-    - name: Build Electron App (No Publish)
+    - name: Build Electron App
       run: |
         echo "Building Electron application for ${{ matrix.platform }}..."
-        # Temporarily disable publishing to avoid GitHub token issues
         npm run package:${{ matrix.platform }}
       env:
-        # Don't set GH_TOKEN to avoid auto-publishing
         ELECTRON_BUILDER_NO_PUBLISH: true
         
     - name: List build output
       shell: bash
       run: |
         echo "Build output contents:"
-        ls -la dist/packaged/ || echo "No packaged output found"
-        find dist/packaged/ -type f -name "*.exe" -o -name "*.dmg" -o -name "*.AppImage" | head -10
+        ls -la dist/packaged/ 2>/dev/null || echo "No packaged directory found"
+        find dist/packaged/ -type f \( -name "*.exe" -o -name "*.dmg" -o -name "*.AppImage" \) 2>/dev/null | head -10 || echo "No build artifacts found"
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: covenantrix-${{ matrix.platform }}-${{ matrix.arch }}
-        path: |
-          dist/packaged/*.exe
-          dist/packaged/*.dmg
-          dist/packaged/*.zip
-          dist/packaged/*.tar.gz
+        path: dist/packaged/${{ matrix.artifact_pattern }}
         retention-days: 30
+        if-no-files-found: error
         
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v') || github.event.inputs.create_release == 'true'
+    if: startsWith(github.ref, 'refs/tags/v')
+    
+    # Add explicit permissions for release job
+    permissions:
+      contents: write
+      actions: read
     
     steps:
     - name: Checkout code
@@ -205,20 +213,31 @@ jobs:
     - name: Display artifact structure
       run: |
         echo "Downloaded artifacts:"
-        find artifacts/ -type f | head -20
+        find artifacts/ -type f 2>/dev/null | head -20 || echo "No artifacts found"
+        echo "Artifact details:"
+        ls -la artifacts/ 2>/dev/null || echo "No artifacts directory"
+        
+    - name: Prepare release files
+      run: |
+        echo "Preparing release files..."
+        mkdir -p release-files
+        
+        # Copy all executable and DMG files to release directory
+        find artifacts/ -name "*.exe" -exec cp {} release-files/ \; 2>/dev/null || echo "No .exe files found"
+        find artifacts/ -name "*.dmg" -exec cp {} release-files/ \; 2>/dev/null || echo "No .dmg files found"
+        
+        echo "Release files prepared:"
+        ls -la release-files/ 2>/dev/null || echo "No release files"
         
     - name: Create Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref_name }}
         name: Covenantrix ${{ github.ref_name }}
         draft: false
         prerelease: ${{ contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') }}
         generate_release_notes: true
-        files: |
-          artifacts/**/*.exe
-          artifacts/**/*.dmg  
-          artifacts/**/*.zip
-          artifacts/**/*.tar.gz
+        files: release-files/*
+        fail_on_unmatched_files: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
