--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "covenantrix",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Contract Intelligence Platform - Proof of Concept",
   "main": "main.js",
+  "homepage": "https://github.com/RandomWilder/Covenantrix_App",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron .",
     "dev": "cross-env NODE_ENV=development electron . --enable-logging",
@@ -11,6 +12,9 @@
     "package:mac": "electron-builder --mac --publish never", 
     "package:linux": "electron-builder --linux --publish never",
     "package:all": "electron-builder --win --mac --publish never",
+    "release:win": "electron-builder --win --x64 --publish always",
+    "release:mac": "electron-builder --mac --publish always",
+    "release:all": "electron-builder --win --mac --publish always",
     "postinstall": "electron-builder install-app-deps",
     "clean": "rimraf dist/",
     "test-build": "npm run clean && npm run package:win"
@@ -20,9 +24,13 @@
     "ai", 
     "legal",
     "document",
-    "analysis"
+    "analysis",
+    "covenantrix"
   ],
-  "author": "Asaf",
+  "author": {
+    "name": "RandomWilder",
+    "url": "https://github.com/RandomWilder"
+  },
   "license": "MIT",
   "devDependencies": {
     "electron": "^27.0.0",
@@ -34,10 +42,17 @@
     "node-fetch": "^3.3.2"
   },
   "build": {
-    "appId": "com.covenantrix.contract-ai",
+    "appId": "com.randomwilder.covenantrix",
     "productName": "Covenantrix",
     "directories": {
       "output": "dist/packaged"
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "RandomWilder",
+      "repo": "Covenantrix_App",
+      "private": false,
+      "publishAutoUpdate": true
     },
     "extraResources": [
       {
@@ -67,21 +82,38 @@
         "target": "nsis",
         "arch": ["x64"]
       },
-      "requestedExecutionLevel": "asInvoker"
+      "requestedExecutionLevel": "asInvoker",
+      "publisherName": "RandomWilder",
+      "verifyUpdateCodeSignature": false
     },
     "mac": {
       "target": "dmg",
-      "category": "public.app-category.business"
+      "category": "public.app-category.business",
+      "hardenedRuntime": false,
+      "gatekeeperAssess": false
+    },
+    "linux": {
+      "target": "AppImage",
+      "category": "Office"
     },
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
-      "createStartMenuShortcut": true
+      "createStartMenuShortcut": true,
+      "installerIcon": "assets/icon.ico",
+      "uninstallerIcon": "assets/icon.ico"
+    },
+    "dmg": {
+      "icon": "assets/icon.icns",
+      "title": "Covenantrix Installer"
     }
   },
   "repository": {
     "type": "git", 
-    "url": "https://github.com/your-username/covenantrix.git"
+    "url": "git+https://github.com/RandomWilder/Covenantrix_App.git"
+  },
+  "bugs": {
+    "url": "https://github.com/RandomWilder/Covenantrix_App/issues"
   }
 }
