--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ aiofiles
 # AI and RAG dependencies
 openai>=1.3.0
 lightrag-hku
-python-magic-bin>=0.4.14         # File type detection (Windows - includes libmagic)
+python-magic-bin>=0.4.14; sys_platform == "win32"  # File type detection (Windows - includes libmagic)
 python-magic>=0.4.27; sys_platform != "win32"  # File type detection (macOS/Linux)
 
 # Document processing dependencies
