SURGICAL FIX v1.0.7: Add Python distribution validation to prevent 74MB builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,37 +61,51 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: bash
       run: |
+        set -e  # Exit immediately if any command fails
+        
         echo "Creating Windows Python distribution..."
         mkdir -p dist/python-dist
         
         # Download embedded Python
-        curl -L -o python-embed.zip ${{ matrix.python_url }}
-        unzip python-embed.zip -d dist/python-dist/
+        echo "Downloading Python embed..."
+        curl -L -o python-embed.zip ${{ matrix.python_url }} || { echo "❌ Failed to download Python embed"; exit 1; }
+        
+        echo "Extracting Python embed..."
+        unzip python-embed.zip -d dist/python-dist/ || { echo "❌ Failed to extract Python embed"; exit 1; }
+        
+        # Verify Python was extracted
+        if [ ! -f "dist/python-dist/python.exe" ]; then
+          echo "❌ Python executable not found after extraction"
+          ls -la dist/python-dist/
+          exit 1
+        fi
         
         # Fix Python path file to enable site-packages
         echo "import sys; import os; sys.path.append(os.path.join(os.path.dirname(__file__), 'Lib', 'site-packages'))" > dist/python-dist/sitecustomize.py
         
         # Uncomment the import site line in python311._pth
-        sed -i 's/#import site/import site/' dist/python-dist/python311._pth
+        sed -i 's/#import site/import site/' dist/python-dist/python311._pth || { echo "❌ Failed to modify python311._pth"; exit 1; }
         
         # Create Lib and site-packages directories
         mkdir -p dist/python-dist/Lib/site-packages
         
         # Download get-pip.py
-        curl -L https://bootstrap.pypa.io/get-pip.py -o get-pip.py
+        echo "Downloading get-pip.py..."
+        curl -L https://bootstrap.pypa.io/get-pip.py -o get-pip.py || { echo "❌ Failed to download get-pip.py"; exit 1; }
         
         # Install pip with proper paths
-        dist/python-dist/python.exe get-pip.py --target dist/python-dist/Lib/site-packages --no-warn-script-location
+        echo "Installing pip..."
+        dist/python-dist/python.exe get-pip.py --target dist/python-dist/Lib/site-packages --no-warn-script-location || { echo "❌ Failed to install pip"; exit 1; }
         
         # Test pip installation
         echo "Testing pip installation..."
-        dist/python-dist/python.exe -c "import pip; print('Pip version:', pip.__version__)"
+        dist/python-dist/python.exe -c "import pip; print('Pip version:', pip.__version__)" || { echo "❌ Pip test failed"; exit 1; }
         
         # Install required packages
         echo "Installing required packages..."
-        dist/python-dist/python.exe -m pip install --target dist/python-dist/Lib/site-packages --no-warn-script-location -r backend/requirements.txt
+        dist/python-dist/python.exe -m pip install --target dist/python-dist/Lib/site-packages --no-warn-script-location -r backend/requirements.txt || { echo "❌ Failed to install packages"; exit 1; }
         
-        echo "Windows Python distribution created successfully"
+        echo "✅ Windows Python distribution created successfully"
         
     - name: Create Python Distribution (macOS)
       if: matrix.os == 'macos-latest'
@@ -117,18 +131,44 @@ jobs:
       run: |
         echo "Verifying Python distribution..."
         
+        # CRITICAL: Ensure Python distribution exists and is valid
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
+          if [ ! -f "dist/python-dist/python.exe" ]; then
+            echo "❌ CRITICAL ERROR: Windows Python executable not found!"
+            exit 1
+          fi
+          
           echo "Python version:"
-          dist/python-dist/python.exe --version
+          dist/python-dist/python.exe --version || { echo "❌ Python executable failed!"; exit 1; }
+          
           echo "Testing package imports:"
-          dist/python-dist/python.exe -c "import fastapi; print('FastAPI version:', fastapi.__version__)"
-          dist/python-dist/python.exe -c "import uvicorn; print('Uvicorn imported successfully')"
-          dist/python-dist/python.exe -c "import pydantic; print('Pydantic version:', pydantic.__version__)"
+          dist/python-dist/python.exe -c "import fastapi; print('FastAPI version:', fastapi.__version__)" || { echo "❌ FastAPI import failed!"; exit 1; }
+          dist/python-dist/python.exe -c "import uvicorn; print('Uvicorn imported successfully')" || { echo "❌ Uvicorn import failed!"; exit 1; }
+          dist/python-dist/python.exe -c "import pydantic; print('Pydantic version:', pydantic.__version__)" || { echo "❌ Pydantic import failed!"; exit 1; }
+          
+          # Check distribution size
+          DIST_SIZE=$(du -sb dist/python-dist | cut -f1)
+          MIN_SIZE=50000000  # 50MB minimum
+          if [ "$DIST_SIZE" -lt "$MIN_SIZE" ]; then
+            echo "❌ CRITICAL ERROR: Python distribution too small ($DIST_SIZE bytes < $MIN_SIZE bytes)"
+            echo "Python distribution contents:"
+            ls -la dist/python-dist/
+            exit 1
+          fi
+          echo "✅ Windows Python distribution validated: ${DIST_SIZE} bytes"
+          
         else
+          if [ ! -f "dist/python-dist/bin/python" ]; then
+            echo "❌ CRITICAL ERROR: macOS Python executable not found!"
+            exit 1
+          fi
+          
           echo "Python version:"
-          dist/python-dist/bin/python --version
+          dist/python-dist/bin/python --version || { echo "❌ Python executable failed!"; exit 1; }
+          
           echo "Testing package imports:"
-          dist/python-dist/bin/python -c "import fastapi, uvicorn, pydantic; print('All packages imported successfully')"
+          dist/python-dist/bin/python -c "import fastapi, uvicorn, pydantic; print('All packages imported successfully')" || { echo "❌ Package import failed!"; exit 1; }
+          echo "✅ macOS Python distribution validated"
         fi
         
         echo "Python distribution verification completed"
