--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covenantrix",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Contract Intelligence Platform - Proof of Concept",
   "main": "main.js",
   "homepage": "https://github.com/RandomWilder/Covenantrix_App",
@@ -30,7 +30,7 @@
     "prerelease:all": "npm run clean-build",
     "release:all": "electron-builder --win --mac --linux --publish always",
     "postinstall": "electron-builder install-app-deps",
-    "clean": "taskkill /f /im \"Covenantrix.exe\" 2>nul || echo \"No processes to stop\" && takeown /f dist /r /d y >nul 2>&1 && icacls dist /grant administrators:F /t >nul 2>&1 && rimraf dist/ || echo \"Clean completed\"",
+    "clean": "taskkill /f /im \"Covenantrix.exe\" 2>nul || echo \"No processes to stop\" && rimraf dist/packaged dist/release dist-react && echo \"Selective clean completed (preserved python-dist)\"",
     "force-clean": "taskkill /f /im \"Covenantrix.exe\" 2>nul && taskkill /f /im \"node.exe\" /fi \"WINDOWTITLE eq *covenantrix*\" 2>nul && takeown /f dist /r /d y >nul 2>&1 && icacls dist /grant administrators:F /t >nul 2>&1 && rimraf dist/ || echo \"Force clean completed\"",
     "test-build": "npm run clean && npm run package:win"
   },
